--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http-status": "^1.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3"
   },
   "devDependencies": {
