--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "chai": "^4.3.4",
